# shared-display

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: compressable_display.rs  compressed.rs  compressed_buffer.rs  flush_lock.rs  lib.rs  sharable_display.rs
core/tests/: bigger_compressable.rs  compressable_display.rs  flush_dirty_only.rs  sharable_buffered_display.rs  simple_compressable.rs
core/tests/common/: mod.rs
examples/: compressed_hello_world.rs  dynamic_split.rs  flush_request.rs  hello_world.rs  recursive_app.rs  resize_app.rs
examples/rp2040/: Cargo.toml  README.md  plot_usage.py
examples/rp2040/src/: main.rs
src/: lib.rs  sharable_display.rs  shared_display_ref.rs  toolkit.rs  toolkit_compressed.rs
tests/: fake_display.rs  fake_display_packed.rs  fake_display_split.rs  flush_dirty_only.rs  sharable_buffered_display.rs  simple_split.rs
