[package]
name = "shared-display-core"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
portable-atomic = { version = "1.3", default-features = false, features = ["require-cas"] }

[dev-dependencies]
tokio = {version = "1.44.0", features = ["full"]}
critical-section = { version = "1.2", features = ["std"] }
